--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,1 +1,11 @@
-$mainColor: #f5f5f5;
+// Colors
+$mainColor: #009488;
+
+// Spacers
+$sectionPadding: 0 15px;
+$sectionMargin: 40px;
+$elementLargeMargin: 25px;
+$elementSmallMargin: 10px;
+
+// Fonts
+$mainFont: Roboto;
