Ajustes finais parte 2

--- a/site/assets/css/custom.css
+++ b/site/assets/css/custom.css
@@ -7,10 +7,15 @@ html {
 body {
     font-size: 14px;
     background: transparent url("http://bgbh.com.br/site/images/base-site-branco.jpg");
+    color: #a3a6ad;
 }
 
 h2 {
     margin: 0 0 0.5em 0;
+}
+
+hr {
+    width: 100%;
 }
 
 .font-800 {
@@ -84,6 +89,10 @@ button.icon:before,
 
 #banner img {
     max-width: 350px;
+}
+
+.wrapper.style1, .wrapper.style3 {
+    background: none;
 }
 
 .wrapper.style2 {
@@ -233,14 +242,14 @@ button.icon:before,
 }
 
 @media screen and (max-width: 736px) {
-    header h2 {
-        font-size: 1.5em !important;
+    #page-wrapper .feature1 header h2 {
+        font-size: 1.3em;
     }
     .box.feature1 header.first>p {
-        font-size: 1.2em;
+        font-size: 1em;
     }
     #page-wrapper .box.feature1 .btn-planilha h3 {
-        font-size: 0.85em;
+        font-size: 0.95em;
         white-space: normal;
         line-height: normal;
     }
@@ -259,7 +268,7 @@ button.icon:before,
     .secao-torneio footer {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         margin: 10px 0 25px;
     }
     .secao-torneio footer a {
@@ -285,11 +294,20 @@ button.icon:before,
     #grupos-whatsapp .box.excerpt p {
         text-align: center;
     }
+    .siga-e-apoie {
+        margin-top: 0;
+    }
 }
 
 @media screen and (max-width: 360px) {
     #banner img {
         max-width: 250px;
+    }
+}
+
+@media screen and (min-width: 737px) {
+    hr.d-md-none {
+        display: none;
     }
 }
 
