--- a/site/assets/sass/main.scss
+++ b/site/assets/sass/main.scss
@@ -108,7 +108,7 @@
 	}
 
 	body {
-		background: #303238 url('images/bg01.png');
+		background: #303238;
 
 		// Stops initial animations until page loads.
 			&.is-preload * {
