Add paginacao e links grupos. Corrigir bug preco

--- a/site/assets/css/custom.css
+++ b/site/assets/css/custom.css
@@ -120,8 +120,16 @@ button.icon:before,
     color: white;
 }
 
+#banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    height: calc(100vh - 90px);
+}
+
 #banner img {
-    max-width: 350px;
+    max-width: 50%;
 }
 
 .wrapper.style1,
