--- a/site/assets/css/custom.css
+++ b/site/assets/css/custom.css
@@ -118,6 +118,10 @@ button.icon:before,
     font-size: 2.5em;
 }
 
+.navbar {
+    font-size: 1rem;
+}
+
 #page-wrapper {
     padding-top: 60px;
 }
