--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -252,11 +252,13 @@ xxl >= 1400px
 
 @media screen and (max-width: 768px) {
     .site-footer .list-group .list-group-item.instagram {
+        color: transparent;
+        background: -webkit-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+        background: -o-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
         background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-      -webkit-background-clip: text;
-              /* Also define standard property for compatibility */
-              background-clip: text;
-      -webkit-text-fill-color: transparent;
+        background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+        background-clip: text;
+        -webkit-background-clip: text;
     }   
 }
 /* ./site footer */
